--- a/Tesfamariam.ipynb
+++ b/Tesfamariam.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "### Project 5 SQL Module\r\n",
-    "import sqlite3 n o to your repository for verification.\r\n"
+    "import sqlite3"
    ]
   },
   {
