--- a/Tesfamariam.ipynb
+++ b/Tesfamariam.ipynb
@@ -5,7 +5,9 @@
    "id": "b5e8ccae-605c-4f6c-8fb4-6d427f772119",
    "metadata": {},
    "source": [
-    "### Project 5 SQL Module\r\n",
+    "### Project 5 SQL Module"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
@@ -37,3 +39,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
